<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/relate"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_txt1"
        android:textColor="#E30000"
        android:textStyle="bold"
        android:textSize="27dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/text2"
        android:layout_below="@id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_txt2"
        android:textColor="#000"
        android:textSize="16dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        />

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_txt3"
            android:textColor="#000"
            android:textSize="15dp"
            android:paddingRight="5dp"
            android:gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_txt4"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="15dp"
            android:gravity="center"
            />
    </LinearLayout>
</RelativeLayout>