<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/swipeStateRefresh"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".StateCases">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/statewise_covid_cases"
        android:textColor="#000"
        android:textSize="23sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Select State -"
                android:textColor="#410070"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/spinState"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:background="#FFCEBE" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!--        android:layout_marginBottom="5dp"-->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/active_case"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_stActive"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="00"
                    android:textColor="#000"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!--        android:layout_marginBottom="5dp"-->
                <!--        android:padding="8dp"-->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/confirmed_case"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_stConfirm"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="00"
                    android:textColor="#000"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!--        android:layout_marginBottom="5dp"-->
                <!--        android:padding="8dp"-->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/recovered_cases"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_stRecover"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="00"
                    android:textColor="#000"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!--        android:layout_marginBottom="5dp"-->
                <!--        android:padding="8dp"-->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/death_case"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_stDeath"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="00"
                    android:textColor="#000"
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Select District -"
                android:textColor="#410070"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/spinDist"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="#E2FFC8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/confirmed_case"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_distConfirm"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="00"
                    android:textColor="#000"
                    android:textSize="15sp" />
            </LinearLayout>
            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:onClick="totalCases"
                android:layout_marginTop="50dp"
                android:text="OVERALL INDIA" />
        </LinearLayout>
    </ScrollView>
    </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>